use phonegap alert, hide keyboard bug

--- a/platforms/ios/www/phone/css/changesyslogin.css
+++ b/platforms/ios/www/phone/css/changesyslogin.css
@@ -1,5 +1,5 @@
 #change_sys_login_wrapper{
-	position:fixed;
+	position:absolute;
 	width:100%;
 	height:100%;
 	display: none;
@@ -7,7 +7,7 @@
 }
 
 .centerWindow{
-	position: fixed;
+	position: absolute;
 	top:50%;
 	left:50%;
 	margin-left:-138px;
